--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -107,17 +107,13 @@
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.system" />
+                android:value="com.android.settings.category.ia.battery" />
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/thermal_summary" />
             <meta-data
                 android:name="com.android.settings.order"
                 android:value="1" />
-                android:value="-253" />
-            <meta-data
-                android:name="com.android.settings.icon"
-                android:resource="@drawable/ic_thermal_settings" />
         </activity>
 
         <activity
